--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -31,6 +31,16 @@ import Stack from '@mui/material/Stack';
     "Guide Documents",
     "https://img.shields.io/badge/guide-documents-forestgreen",
     "https://typia.io/docs/",
+  ],
+  [
+    "Gurubase",
+    "https://img.shields.io/badge/Gurubase-Ask%20Typia%20Guru-006BFF",
+    "https://gurubase.io/g/typia",
+  ],
+  [
+    "Discord",
+    "https://img.shields.io/badge/discord-samchon-d91965?style=flat&labelColor=5866f2&logo=discord&logoColor=white&link=https://discord.gg/E94XhzrUCZ",
+    "https://discord.gg/E94XhzrUCZ",
   ]
 ].map(([alt, image, url]) => (
   <a href={url} style={{ marginTop: "30px", marginRight: "6px" }}>
